fix overflow styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import './scss/_variables';
 
-html {
-    overflow: hidden;
-}
-
 .App {
     margin: 0;
     padding: 0;
